# quarantine-craft

./: .gitmodules  README.md  TODO.org  todo.org
ansible/: .gitignore  DEPLOY.org  README.md  TODO.org  ansible-requirements.yml  ansible.cfg  pip-requirements.txt  play_all.yml  play_minecraft.yml  play_scraper.yml  play_system.yml  play_webserver.yml  playbook.yml
ansible/host_vars/: sigmund.yml  sigsentry.yml
ansible/inv/: defaults.yml  test.yml
ansible/roles/: .gitignore
ansible/roles/paper/: README.md
ansible/roles/paper/handlers/: main.yml
ansible/roles/paper/tasks/: main.yml
ansible/roles/paper/templates/: help.yml  server.properties
ansible/roles/paper/vars/: main.yml
ansible/roles/scraper/: README.md
ansible/roles/web/: README.md
ansible/templates/: etc_default_minecraft
api/: README.md  schemas  setup.cfg  setup.py
api/qcraft_scraper/: __init__.py  __main__.py  economy.py  mcmmo.py
api/qcraft_scraper/schemas/: economy.json  mcmmo.json
api/schemas/: README.md  economy.json  mcmmo.json
api/scrape/: __init__.py  __main__.py  scrape.py
api/scraper/: __init__.py  __main__.py  economy.py
scraper/: README.md
web/: .gitignore  README.md  package-lock.json  package-scripts.js  package.json  webpack.config.js
web/components/: layout.js
web/devServer/: index.js
web/devServer/__stubs__/: economy.json
web/pages/: index.js
web/public/: index.html
web/src/: index.css  theme.ts
web/src/components/: App.tsx  Layout.tsx  NotFound.tsx
web/src/context/: DefaultContext.ts
web/styles/: global.css  utils.module.css
(+24 files in other folders)
