[metadata]
name = qcraft-scraper
description = Collects server data and exposes it to the webserver
version = 0.1.0

[options]
packages =
  qcraft_scraper
install_requires =
  pyyaml
  jsonschema
include_package_data = True

[options.entry_points]
console_scripts =
  qcraft-scraper = qcraft_scraper:run

[options.package_data]
qcraft_scraper =
  schemas/*.json
